# teste-19

./: .gitignore  README.md  exemplo.env  pyproject.toml  requirements.txt
dashboard/: app.py
dbt_pdfs/: dbt_project.yml
dbt_pdfs/models/: sources.yml
dbt_pdfs/models/bronze/jornada/: bronze_fatura_jornada.sql  (+1 more)
dbt_pdfs/models/gold/: gold_fatura.sql
src/: pdf_viz.py  start.py
src/files/: start.py
src/files/csv/: Redrex - Fatura (1).csv  Redrex - Fatura (1)_small.csv  Redrex - Fatura (10).csv  Redrex - Fatura (10)_small.csv  Redrex - Fatura (11).csv  Redrex - Fatura (11)_small.csv  Redrex - Fatura (12).csv  Redrex - Fatura (12)_small.csv  Redrex - Fatura (13).csv  Redrex - Fatura (13)_small.csv  Redrex - Fatura (14).csv  Redrex - Fatura (14)_small.csv  Redrex - Fatura (15).csv  Redrex - Fatura (15)_small.csv  Redrex - Fatura (16).csv  Redrex - Fatura (16)_small.csv  Redrex - Fatura (17).csv  Redrex - Fatura (17)_small.csv  Redrex - Fatura (18).csv  Redrex - Fatura (18)_small.csv  Redrex - Fatura (19).csv  Redrex - Fatura (19)_small.csv  Redrex - Fatura (2).csv  Redrex - Fatura (2)_small.csv  Redrex - Fatura (20).csv  Redrex - Fatura (20)_small.csv  Redrex - Fatura (21).csv  Redrex - Fatura (21)_small.csv  Redrex - Fatura (22).csv  Redrex - Fatura (22)_small.csv  Redrex - Fatura (23).csv  Redrex - Fatura (23)_small.csv  Redrex - Fatura (24).csv  Redrex - Fatura (24)_small.csv  Redrex - Fatura (25).csv  Redrex - Fatura (25)_small.csv  Redrex - Fatura (26).csv  Redrex - Fatura (26)_small.csv  Redrex - Fatura (27).csv  Redrex - Fatura (27)_small.csv  (+80 more)
(+6 files in other folders)
