[tool.poetry]
name = "automacao-pdfs"
version = "0.1.0"
description = ""
authors = ["ianlucasch <ianlucaschaves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
camelot-py = "^0.11.0"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
ghostscript = "^0.7"
pandas = "^2.2.2"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.32"
unidecode = "^1.3.8"
dbt-core = "^1.8.5"
dbt-postgres = "^1.8.2"
streamlit = "^1.38.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
